deploy/kustomize/base/gateway/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kuberag
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
